--- a/css/styles.css
+++ b/css/styles.css
@@ -25,13 +25,17 @@ body {
   text-decoration: none;
 }
 
+.span {
+  color: var(--color-title);
+}
+
 .header-item {
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
   line-height: 24px;
   letter-spacing: 0.02em;
-  color: #2e2f42;
+  color: var(--color-title);
 }
 .header-item:hover {
   color: #404bbf;
@@ -75,6 +79,27 @@ h1 {
   letter-spacing: 0.02em;
   color: #ffffff;
   background-color: #2e2f42;
+}
+
+.hero-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  display: flex;
+  align-items: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  background-color: #4d5ae5;
+  cursor: pointer;
+}
+
+.hero-button:hover {
+  background-color: #404bbf;
+}
+
+.hero-button:focus {
+  background-color: #404bbf;
 }
 
 h2 {
@@ -133,4 +158,22 @@ h2 {
   letter-spacing: 0.02em;
   text-transform: capitalize;
   color: var(--color-title);
+}
+
+.pg-button {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+}
+
+.pg-button:hover {
+}
+
+.pg-button:focus {
 }
