--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ body {
   background-color: var(--body-bg);
 }
 
-.logo-header {
+.link-logo-header {
   font-family: "Raleway", sans-serif;
   font-style: normal;
   font-weight: 800;
@@ -37,6 +37,20 @@ body {
   letter-spacing: 0.02em;
   color: var(--color-title);
 }
+
+.link-header {
+  color: var(--color-title);
+  text-decoration: none;
+}
+
+.link-header:hover {
+  color: #404bbf;
+}
+
+.link-header:focus {
+  color: #404bbf;
+}
+
 .header-item:hover {
   color: #404bbf;
 }
@@ -49,6 +63,22 @@ body {
   font-style: normal;
 }
 
+.link-address {
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  text-decoration: none;
+  color: var(--color-text);
+}
+
+.link-address:hover {
+  color: #404bbf;
+}
+
+.link-address:focus {
+  color: #404bbf;
+}
+
 .header-list-address {
   font-style: normal;
   font-weight: 400;
@@ -56,6 +86,7 @@ body {
   line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-text);
+  list-style: none;
 }
 
 .header-item-address:hover {
@@ -66,7 +97,28 @@ body {
   color: #404bbf;
 }
 
-.logo-footer {
+.footer {
+  background-color: var(--color-title);
+}
+
+.link-logo-footer {
+  font-family: "Raleway", sans-serif;
+  font-style: normal;
+  font-weight: 800;
+  font-size: 18px;
+  line-height: 1.17;
+  letter-spacing: 0.03em;
+  text-transform: uppercase;
+  color: var(--color-logo);
+  text-decoration: none;
+}
+
+.span-footer {
+  color: #f4f4fd;
+}
+
+.footer-text {
+  color: #f4f4fd;
 }
 
 h1 {
@@ -100,9 +152,6 @@ h1 {
 
 .hero-button:focus {
   background-color: #404bbf;
-}
-
-h2 {
 }
 
 .hero {
@@ -160,6 +209,26 @@ h2 {
   color: var(--color-title);
 }
 
+.team-item {
+  background-color: #ffffff;
+}
+
+.team-title-second {
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--color-title);
+}
+
+.team-text {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--color-text);
+}
+
 .pg-button {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
@@ -168,12 +237,35 @@ h2 {
   align-items: center;
   text-align: center;
   letter-spacing: 0.04em;
-  color: #ffffff;
   cursor: pointer;
+  color: var(--color-logo);
+  background-color: var(--color-text-p);
 }
 
 .pg-button:hover {
+  background-color: #404bbf;
+  color: #ffffff;
 }
 
 .pg-button:focus {
+  background-color: #404bbf;
+  color: #ffffff;
+}
+
+.portfolio-title-pg {
+  font-family: "Roboto", sans-serif;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 20px;
+  line-height: 1.2;
+  letter-spacing: 0.02em;
+  color: var(--color-title);
+}
+
+.portfolio-text-pg {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 24px;
+  letter-spacing: 0.02em;
+  color: var(--color-text);
 }
