--- a/css/styles.css
+++ b/css/styles.css
@@ -265,7 +265,7 @@ h1 {
 .portfolio-text-pg {
   font-weight: 400;
   font-size: 16px;
-  line-height: 24px;
+  line-height: 1, 5;
   letter-spacing: 0.02em;
   color: var(--color-text);
 }
