--- a/css/styles.css
+++ b/css/styles.css
@@ -119,6 +119,8 @@ body {
 
 .footer-text {
   color: #f4f4fd;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 h1 {
@@ -265,7 +267,7 @@ h1 {
 .portfolio-text-pg {
   font-weight: 400;
   font-size: 16px;
-  line-height: 1, 5;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   color: var(--color-text);
 }
